<?xml version="1.0"?>
<package format="2">
  <name>ros_msgs</name>
  <version>0.0.0</version>
  <description>Data Communication for each module of system in ros</description>
  
  <maintainer email="601081321@qq.com">xiaofan zhang</maintainer>
  <license>Business</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>geometry_msgs</build_depend> -->
  
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>geometry_msgs</exec_depend> -->

</package>